# itch-orderbook

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
bench/: bench_book.cpp  bench_churn.cpp  bench_levels.cpp
include/itch/: report.hpp
include/itch/book/: mbo_book.hpp  order_book.hpp
include/itch/core/: endian.hpp  object_pool.hpp
include/itch/protocol/: dispatch.hpp  messages.hpp
include/itch/transport/: mmap_file.hpp  moldudp64.hpp  parser.hpp  udp_source.hpp
src/: live.cpp  main.cpp
tests/: test_itch.cpp
tools/: download_sample.sh  gen_synthetic.cpp  validate.sh
